--- a/.env
+++ b/.env
@@ -1,3 +1,3 @@
-VITE_DIST_PATH=./dist/pages/pj/
-VITE_ASSETS_PATH=pages/pj/assets/
+VITE_DIST_PATH=./dist/
+VITE_ASSETS_PATH=assets/
 VITE_PUBLIC_PATH=./
