--- a/package.json
+++ b/package.json
@@ -40,6 +40,8 @@
     "dat.gui": "^0.7.9",
     "glslify": "^7.1.1",
     "gsap": "^3.12.2",
+    "lil-gui": "^0.20.0",
+    "postprocessing": "^6.36.7",
     "sweet-scroll": "^4.0.0",
     "three": "^0.166.1",
     "video.js": "^8.3.0",
