--- a/package.json
+++ b/package.json
@@ -42,13 +42,14 @@
     "glslify": "^7.1.1",
     "gsap": "^3.12.2",
     "lil-gui": "^0.20.0",
+    "p5": "^2.1.1",
     "postprocessing": "^6.36.7",
     "sweet-scroll": "^4.0.0",
     "three": "^0.180.0",
+    "three.meshline": "^1.3.0",
     "video.js": "^8.3.0",
     "vite-plugin-ejs": "^1.7.0",
     "vite-plugin-glsl": "^1.1.1",
-    "vite-plugin-glslify": "^2.1.0",
-    "three.meshline": "^1.3.0"
+    "vite-plugin-glslify": "^2.1.0"
   }
 }
